add equals and colon combos

--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -12,7 +12,7 @@
 #define COMBO_HOOK require-prior-idle-ms = <150>;
 
 #define COMBO_TERM_FAST 30
-#define COMBO_TERM_SLOW 35
+#define COMBO_TERM_SLOW 50
 
 // make homerow combos tap-only (so HRMs can be chorded instantaneously)
 #define HRC_TAB    &hml         LA(LCTRL) TAB
@@ -26,6 +26,9 @@ ZMK_COMBO(bspc,  &kp BSPC,      LM3 LM2,     DEF NAV NUM, COMBO_TERM_FAST)
 ZMK_COMBO(ret,   &kp RETURN,    LM2 LM1,     DEF NAV NUM, COMBO_TERM_FAST)
 
 ZMK_COMBO(under, &kp UNDER,     RT1 RT2,     DEF NAV NUM, COMBO_TERM_SLOW)
+ZMK_COMBO(equals, &kp EQUAL,    LT1 LT2,     DEF NAV NUM, COMBO_TERM_SLOW)
+ZMK_COMBO(colon, &kp COLON,     LT3 LT2,     DEF NAV NUM, COMBO_TERM_SLOW)
+
 
 
 /* Horizontal combos - left hand */
