--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -38,7 +38,7 @@ ZMK_COMBO(minus, &kp MINUS,     RT2 RT3,     DEF NAV NUM, COMBO_TERM_SLOW)
 ZMK_COMBO(select_all, HRC_ALL, LM1 LM3,    DEF NAV NUM, COMBO_TERM_SLOW)
 
 /* Horizontal combos - left hand */
-ZMK_COMBO(mouse, &smart_mouse,  LT3 LT1,     DEF NAV NUM, COMBO_TERM_FAST)
+// ZMK_COMBO(mouse, &smart_mouse,  LT3 LT1,     DEF NAV NUM, COMBO_TERM_FAST)
 
 // ZMK_COMBO(tab,   HRC_TAB,       LM3 LM2,     DEF NAV NUM, COMBO_TERM_FAST)
 // ZMK_COMBO(repeat,HRC_REPEAT,    LM2 LM1,     DEF NAV NUM, COMBO_TERM_FAST)
