--- a/config/corne.conf
+++ b/config/corne.conf
@@ -9,3 +9,7 @@ CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 
 CONFIG_ZMK_KEYBOARD_NAME="C2K-Corne"
+
+CONFIG_ZMK_DISPLAY=y
+
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
